[gd_scene load_steps=23 format=2]

[ext_resource path="res://main/Minimap.gd" type="Script" id=1]
[ext_resource path="res://gui/GameGUI.gd" type="Script" id=2]
[ext_resource path="res://gui/alphbeta.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gui/warrior_attack2.png" type="Texture" id=4]
[ext_resource path="res://gui/warrior_movement.png" type="Texture" id=5]
[ext_resource path="res://gui/warrior_ultimate.png" type="Texture" id=6]
[ext_resource path="res://gui/warrior_attack1.png" type="Texture" id=7]
[ext_resource path="res://gui/Minimal5x7.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://gui/icons/status_midnight.png" type="Texture" id=9]
[ext_resource path="res://gui/icons/status_rage.png" type="Texture" id=10]
[ext_resource path="res://gui/icons/status_shrinedeath.png" type="Texture" id=11]
[ext_resource path="res://gui/icons/status_midday.png" type="Texture" id=12]
[ext_resource path="res://gui/icons/status_swift.png" type="Texture" id=13]
[ext_resource path="res://gui/icons/status_focus_keep.png" type="Texture" id=14]
[ext_resource path="res://gui/icons/status_focus_players.png" type="Texture" id=15]
[ext_resource path="res://white_pixel.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 3
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.670588 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 8 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Statuses" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Midnight" type="TextureRect" parent="Statuses"]
visible = false
modulate = Color( 0, 0.647059, 1, 1 )
margin_right = 24.0
margin_bottom = 24.0
mouse_filter = 2
texture = ExtResource( 9 )

[node name="ShrineDeath" type="TextureRect" parent="Statuses"]
visible = false
modulate = Color( 0, 0.647059, 1, 1 )
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
mouse_filter = 2
texture = ExtResource( 11 )

[node name="Midday" type="TextureRect" parent="Statuses"]
visible = false
modulate = Color( 1, 0.4, 0, 1 )
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
mouse_filter = 2
texture = ExtResource( 12 )

[node name="Rage" type="TextureRect" parent="Statuses"]
visible = false
modulate = Color( 1, 0.4, 0, 1 )
margin_left = 28.0
margin_right = 52.0
margin_bottom = 32.0
mouse_filter = 2
texture = ExtResource( 10 )

[node name="Swiftness" type="TextureRect" parent="Statuses"]
visible = false
modulate = Color( 1, 0.4, 0, 1 )
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
mouse_filter = 2
texture = ExtResource( 13 )

[node name="FocusKeep" type="TextureRect" parent="Statuses"]
visible = false
modulate = Color( 1, 0.4, 0, 1 )
margin_right = 24.0
margin_bottom = 24.0
mouse_filter = 2
texture = ExtResource( 14 )

[node name="FocusPlayers" type="TextureRect" parent="Statuses"]
visible = false
modulate = Color( 1, 0.4, 0, 1 )
margin_left = 56.0
margin_right = 80.0
margin_bottom = 32.0
mouse_filter = 2
texture = ExtResource( 15 )

[node name="Minimap" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -103.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = 103.0
rect_clip_content = true
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Abilities" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -35.0
margin_right = -3.0
margin_bottom = -3.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack1" type="TextureProgress" parent="Abilities"]
margin_top = 217.0
margin_right = 32.0
margin_bottom = 249.0
mouse_filter = 2
max_value = 1.0
step = 0.001
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 7 )
fill_mode = 3
tint_under = Color( 1, 1, 1, 0.392157 )

[node name="Attack2" type="TextureProgress" parent="Abilities"]
margin_top = 253.0
margin_right = 32.0
margin_bottom = 285.0
mouse_filter = 2
max_value = 1.0
step = 0.001
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
fill_mode = 3
tint_under = Color( 1, 1, 1, 0.392157 )

[node name="Movement" type="TextureProgress" parent="Abilities"]
margin_top = 289.0
margin_right = 32.0
margin_bottom = 321.0
mouse_filter = 2
max_value = 1.0
step = 0.001
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 5 )
fill_mode = 3
tint_under = Color( 1, 1, 1, 0.392157 )

[node name="Ultimate" type="TextureProgress" parent="Abilities"]
margin_top = 325.0
margin_right = 32.0
margin_bottom = 357.0
mouse_filter = 2
max_value = 1.0
step = 0.001
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 3
tint_under = Color( 1, 1, 1, 0.392157 )

[node name="PlayerBars" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_bottom = -5.0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="TextureProgress" parent="PlayerBars"]
margin_left = 218.0
margin_right = 318.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 15 )
mouse_filter = 2
step = 0.1
value = 100.0
texture_under = ExtResource( 16 )
texture_progress = ExtResource( 16 )
tint_under = Color( 0.168627, 0.168627, 0.168627, 1 )
tint_progress = Color( 0.588235, 0.12549, 0, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerBars/Health"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy" type="TextureProgress" parent="PlayerBars"]
margin_left = 322.0
margin_right = 422.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 15 )
mouse_filter = 2
value = 100.0
texture_under = ExtResource( 16 )
texture_progress = ExtResource( 16 )
tint_under = Color( 0.168627, 0.168627, 0.168627, 1 )
tint_progress = Color( 0, 0.552941, 1, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerBars/Energy"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exhaustion" type="TextureProgress" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -51.0
margin_right = 35.0
margin_bottom = -3.0
mouse_filter = 2
texture_under = ExtResource( 16 )
texture_progress = ExtResource( 16 )
fill_mode = 3
tint_under = Color( 0.282353, 0.341176, 0.337255, 1 )
tint_progress = Color( 0.776471, 0.494118, 0.0980392, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Exhaustion"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chat" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -160.0
margin_right = -40.0
margin_bottom = -20.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Chat"]
margin_right = 560.0
margin_bottom = 126.0
mouse_filter = 2
size_flags_vertical = 11
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Chat/ScrollContainer"]
margin_right = 560.0
margin_bottom = 126.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="ChatLine" type="LineEdit" parent="Chat"]
margin_top = 130.0
margin_right = 560.0
margin_bottom = 140.0
mouse_filter = 2
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
max_length = 150
placeholder_text = "Say something..."
placeholder_alpha = 0.3
caret_blink = true
caret_blink_speed = 0.4

[node name="Tween" type="Tween" parent="Chat"]

[node name="Tooltip" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.866667 )
margin_right = 250.0
margin_bottom = 100.0
mouse_filter = 2
color = Color( 0.0705882, 0.0980392, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Tooltip"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Tooltip/VBoxContainer"]
margin_right = 240.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0.976471, 1, 1 )
text = "Ability"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="Tooltip/VBoxContainer"]
margin_top = 19.0
margin_right = 240.0
margin_bottom = 30.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 6 )
bbcode_text = "This is a tooltip"
text = "This is a tooltip"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0588235, 0.0784314, 0.105882, 0.764706 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterContainer"]
margin_left = 278.0
margin_top = 146.0
margin_right = 362.0
margin_bottom = 214.0

[node name="Resume" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "Resume"

[node name="Disconnect" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 84.0
margin_bottom = 44.0
text = "Disconnect"

[node name="Quit" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 84.0
margin_bottom = 68.0
text = "Quit"
[connection signal="text_entered" from="Chat/ChatLine" to="." method="_on_ChatLine_text_entered"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/Disconnect" to="." method="_on_Disconnect_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
